@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Net-Lujoyglamour
-version:            0.0.1
+version:            0.0.2
 abstract:           Create short URLs with luxury and glamour
 author:
     - JJ Merelo <jj@merelo.net>
