@@ -1,0 +1,15 @@
+<html>
+  <head>
+    <title>Get short URL via Net::Lujoyglamour</title>
+  </head>
+  <body>
+     <h1>Get short URL via Net::Lujoyglamour</h1>
+
+     <form>
+       <input type='hidden' name='rm' value='geturl' />
+       <p><span class='label'>Long URL: http://</span><input type='text' name='longurl' size='30' maxsize='256' /></p>
+       <p><span class='label'>Desired short URL: http://<TMPL_VAR NAME=domain>/</span><input type='text' name='shorturl' size='16' /></p>
+       <input type='submit' name='Send' value='Sending' />
+     </form>
+  </body>
+</html>
