@@ -1,0 +1,14 @@
+<html>
+  <head>
+    <title>Error getting short URL via Net::Lujoyglamour</title>
+  </head>
+  <body>
+     <h1>Short URL not found</h1>
+
+<p>Sorry, but we haven't been able to find
+  http://<TMPL_VAR NAME=domain>/<TMPL_VAR NAME=shorturl>. But you can
+      still <a href='/'>create it</a>.</p>
+
+
+  </body>
+</html>
