@@ -1,3 +1,7 @@
+2010-01-01  Juan J. Merelo  <jmerelo@vega>
+
+	* MANIFEST: 0.0.2 tries to fix some errors and add app code. 
+
 Revision history for Net-Lujoyglamour
 
 0.0.1  Tue Oct  6 19:31:52 2009
